<resources>
    <string name="app_name">DataBaseManager</string>

    <string name="action_settings">Settings</string>
    <string name="search">search</string>
    <string name="insertText">Insert name to search</string>
    <string name="addContact">Add Contact</string>
    <string name="title">Create Contact</string>
    <string name="name">Name: </string>
    <string name="insert_name">Insert name </string>
    <string name="phone">Phone: </string>
    <string name="insert_phone">Insert phone </string>
    <string name="btnCreate">Create </string>
    <string name="seeContacts">See Contacts </string>
    <string name="showContacts">Show Contacts</string>
    <string name="title2">Modify Contact</string>
    <string name="modifyContact">Modify Contact</string>
    <string name="btnModify">Modify</string>
</resources>
