<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title2"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="#000"
        android:textStyle="bold"
        android:id="@+id/textView1" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="#000"
            android:textSize="18dp"
            android:layout_weight="1"
            android:text="@string/name"
            android:id="@+id/textViewName1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPersonName"
            android:hint="@string/insert_name"
            android:ems="10"
            android:id="@+id/editTextName1" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="#000"
            android:textSize="18dp"
            android:layout_weight="1"
            android:text="@string/phone"
            android:id="@+id/textViewPhone1" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="phone"
            android:ems="10"
            android:hint="@string/insert_phone"
            android:id="@+id/editTextPhone1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnModify"
            android:id="@+id/buttonModify1" />
    </TableRow>
</TableLayout>